--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,32 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  font-family: Helvetica, sans-serif;
+  font-size: 2.4rem;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 2.4rem;
+}
+
+.subtitle {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: var(--color-primary);
+  text-transform: uppercase;
+}
+
+.small-text {
+  font-size: 1.8rem;
+}
