--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ h3 {
 .btn:hover {
   border: 2px solid var(--color-secondary);
   background-color: var(--color-secondary);
+  color: var(--color-body-light);
 }
 
 .btn--block {
