--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ h3 {
   color: var(--color-body);
   text-decoration: none;
   letter-spacing: 1px;
+  border-radius: 7px;
 }
 
 .btn-plan {
@@ -91,6 +92,7 @@ h3 {
   padding: 1.6rem 0;
   text-align: center;
   width: 80%;
+  border-radius: 7px;
 }
 
 .btn:hover {
