--- a/css/styles.css
+++ b/css/styles.css
@@ -712,6 +712,10 @@ article {
 }
 
 @media screen and (min-width: 768px) {
+  .testimonial {
+    padding: 15rem 0;
+  }
+
   .testimonial__wrap {
     display: flex;
     justify-content: space-between;
@@ -722,6 +726,12 @@ article {
 
   .testimonial-content-wrap {
     width: 60%;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .testimonial {
+    padding: 8rem 0;
   }
 }
 
