--- a/css/styles.css
+++ b/css/styles.css
@@ -585,10 +585,29 @@ h3 {
   margin: 1rem 0 1rem 0;
   font-weight: 400;
   text-align: center;
-  font-size: 2.8rem;
+  font-size: 1.6rem;
   line-height: 1.4;
 }
 
+@media screen and (min-width: 365px) {
+  .features__heading {
+    margin: 1rem 0 1rem 0;
+    font-weight: 400;
+    text-align: center;
+    font-size: 2rem;
+    line-height: 1.4;
+  }
+}
+
+@media screen and (min-width: 510px) {
+  .features__heading {
+    margin: 1rem 0 1rem 0;
+    font-weight: 400;
+    text-align: center;
+    font-size: 2.8rem;
+    line-height: 1.4;
+  }
+}
 @media screen and (min-width: 768px) {
   .features__heading {
     margin: 7rem 0 4rem 0;
