--- a/css/styles.css
+++ b/css/styles.css
@@ -588,7 +588,11 @@ h3 {
   font-size: 1.6rem;
   line-height: 1.4;
 }
-
+@media screen and (min-width: 375px) {
+  .container {
+    width: 90%;
+  }
+}
 @media screen and (min-width: 365px) {
   .features__heading {
     margin: 1rem 0 1rem 0;
