Adjusted container size on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -381,6 +381,12 @@ h3 {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 399px) {
+  .container {
+    width: 85%;
+  }
+}
+
 .row {
   display: flex;
   padding: 1.4rem 0;
@@ -588,11 +594,7 @@ h3 {
   font-size: 1.6rem;
   line-height: 1.4;
 }
-@media screen and (min-width: 375px) {
-  .container {
-    width: 90%;
-  }
-}
+
 @media screen and (min-width: 365px) {
   .features__heading {
     margin: 1rem 0 1rem 0;
