Increased container size for smaller screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -387,6 +387,11 @@ h3 {
   }
 }
 
+@media screen and (max-width: 370px) {
+  .container {
+    width: 87%;
+  }
+}
 .row {
   display: flex;
   padding: 1.4rem 0;
