--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,10 @@ h3 {
   align-items: center;
   flex-wrap: wrap;
   padding: 1.8rem 2rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  top: 0;
 }
 
 .list {
@@ -400,6 +404,7 @@ h3 {
 
 .hero {
   background-color: var(--color-body-light);
+  margin: 10rem 0 0 0; 
 }
 
 @media screen and (min-width: 768px) {
